# ahuhu

./: bible_versions.json  bible_versions.py  main.py  progress.json  pyproject.toml
data/ERV/01_GEN/: GEN_001_ERV.json  GEN_002_ERV.json  GEN_003_ERV.json  GEN_004_ERV.json  GEN_005_ERV.json  GEN_006_ERV.json  GEN_007_ERV.json  GEN_008_ERV.json  GEN_009_ERV.json  GEN_010_ERV.json  GEN_011_ERV.json  GEN_012_ERV.json  GEN_013_ERV.json  GEN_014_ERV.json  GEN_015_ERV.json  GEN_016_ERV.json  GEN_017_ERV.json  GEN_018_ERV.json  GEN_019_ERV.json  GEN_020_ERV.json  GEN_021_ERV.json  GEN_022_ERV.json  GEN_023_ERV.json  GEN_024_ERV.json  GEN_025_ERV.json  GEN_026_ERV.json  GEN_027_ERV.json  GEN_028_ERV.json  GEN_029_ERV.json  GEN_030_ERV.json  GEN_031_ERV.json  GEN_032_ERV.json  GEN_033_ERV.json
data/ERV/02_EXO/: EXO_001_ERV.json  EXO_002_ERV.json  EXO_003_ERV.json  EXO_004_ERV.json  EXO_005_ERV.json  EXO_006_ERV.json  EXO_007_ERV.json  EXO_008_ERV.json  EXO_009_ERV.json  EXO_010_ERV.json  EXO_011_ERV.json  EXO_012_ERV.json  EXO_013_ERV.json  EXO_014_ERV.json  EXO_015_ERV.json  EXO_016_ERV.json  EXO_017_ERV.json  EXO_018_ERV.json  EXO_019_ERV.json  EXO_020_ERV.json  EXO_021_ERV.json  EXO_022_ERV.json  EXO_023_ERV.json  EXO_024_ERV.json  EXO_025_ERV.json  EXO_026_ERV.json  EXO_027_ERV.json  EXO_028_ERV.json  EXO_029_ERV.json  EXO_030_ERV.json  EXO_031_ERV.json  EXO_032_ERV.json
data/ERV/03_LEV/: LEV_001_ERV.json  LEV_002_ERV.json  LEV_003_ERV.json  LEV_004_ERV.json  LEV_005_ERV.json  LEV_006_ERV.json  LEV_007_ERV.json  LEV_008_ERV.json  LEV_009_ERV.json  LEV_010_ERV.json  (+17 more)
(+71 files in other folders)
